# ACTS

./: CMakeLists.txt
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/TrackFinding/include/ActsExamples/TrackFinding/: TrackParamsEstimationAlgorithm.hpp
Examples/Algorithms/TrackFinding/src/: TrackParamsEstimationAlgorithm.cpp
Examples/Algorithms/TrackFindingExaTrkX/src/: TrackFindingAlgorithmExaTrkX.cpp
Examples/Algorithms/TrackFindingMLBased/: CMakeLists.txt
Examples/Algorithms/TrackFindingMLBased/include/ActsExamples/TrackFindingMLBased/: TrackFindingMLBasedAlgorithm.hpp
Examples/Algorithms/TrackFindingMLBased/src/: TrackFindingMLBasedAlgorithm.cpp
Examples/Detectors/GenericDetector/include/ActsExamples/GenericDetector/: BuildGenericDetector.hpp
Examples/Framework/src/Framework/: Sequencer.cpp
Examples/Framework/src/Utilities/: Paths.cpp
Examples/Io/Csv/: CMakeLists.txt
Examples/Io/Csv/include/ActsExamples/Io/Csv/: CsvSpacepointsWriter.hpp
Examples/Io/Csv/src/: CsvOutputData.hpp  CsvSpacepointsWriter.cpp
Examples/Run/: CMakeLists.txt
Examples/Run/Common/src/: CommonOptions.cpp
Examples/Run/Reconstruction/: CMakeLists.txt
Examples/Run/Reconstruction/ExaTrkX/: CMakeLists.txt  TrackFindingExaTrkXGeneric.cpp
Examples/Run/Reconstruction/MLBasedTrackFinding/: CMakeLists.txt  Measurements2Spacepoints.cpp  TrackFindingMLBasedExample.cpp  TrackFindingMLBasedExampleSimple.cpp
Examples/Scripts/Python/: exatrkx.py
Plugins/ExaTrkX/: CMakeLists.txt  README.md
Plugins/ExaTrkX/include/Acts/Plugins/ExaTrkX/: ExaTrkXTrackFinding.hpp
Plugins/ExaTrkX/src/: ExaTrkXTrackFinding.cpp  buildEdges.hpp  weaklyConnectedComponents.hpp
Tests/UnitTests/Plugins/: CMakeLists.txt
Tests/UnitTests/Plugins/Python/: CMakeLists.txt  invoke_py_func.cpp
cmake/: ActsCompilerOptions.cmake  Findcugraph.cmake
